# wayland-integration-tests

./: .gitignore  COPYING  Makefile.am  README  TODO  configure.ac
benchmark/: Makefile.am  benchmark-runner.c  roundtrip-benchmark.c  wayland-benchmarks.c  wit-benchmark.h
src/: Makefile.am  client.c  client.h  configuration.h  events.c  events.h  server.c  server.h  wit-assert.h  wit-client-protocol.c  wit-global.c  wit-global.h  wit-server-protocol.c  wit.h
test/: Makefile.am  README  events-test.c  pointer-test.c  proxy-test.c  test-helpers.c  test-runner.c  wit-test.c  wl_global-test.c  wl_pointer-test.c  wl_proxy-test.c  wl_registry-test.c  wl_shm-test.c
test/benchmarks/: README
test/test-runner/: Makefile.am  test-helpers.c  test-runner.c  test-runner.h
tools/: colorlog
